# geometric_informed_planning

./: README.md
code/catkin_ws/src/auto_pilot/: .gitignore  CMakeLists.txt  README.md  init.sh  package.xml
code/catkin_ws/src/auto_pilot/config/: crazyflie.fp  m500.fp  starling.fp  wp_corners.csv  wp_fan.csv
code/catkin_ws/src/auto_pilot/launch/: all.launch  trajectory.launch  (+1 more)
code/catkin_ws/src/path_planning/: CMakeLists.txt  package.xml
code/catkin_ws/src/path_planning/config/: path_planning_config.yaml
code/catkin_ws/src/path_planning/figures/: Semester project notes.md  algorithm_efficiency.md
code/catkin_ws/src/path_planning/include/: optimal_path.h  optimization.h
code/catkin_ws/src/path_planning/include/frontier_evaluation/: frontier_evaluation.h
code/catkin_ws/src/path_planning/include/optimal_path/: optimal_path_NBV.h  optimal_path_TSP.h
code/catkin_ws/src/path_planning/include/utils/: rrtstar_base.hpp
code/catkin_ws/src/path_planning/launch/: all.launch  frontier_evaluation.launch
code/catkin_ws/src/path_planning/lib/: frontier_evaluation.h
code/catkin_ws/src/path_planning/msg/: Segment.msg  Viewpoint.msg
code/catkin_ws/src/path_planning/output/: analysis.m
code/catkin_ws/src/path_planning/output/comparison/horizon_jp0.5_gain_6.0_0.5_1.5_4.0/: total_segment_length.csv
code/catkin_ws/src/path_planning/output/comparison/jp0.5_gain_0.5_0.0_1.5_0.0/: energy_consumption.csv  evaluation_duration.csv  planning_duration.csv  total_segment_length.csv
code/catkin_ws/src/path_planning/output/comparison/jump_size=0.2/: energy_consumption.csv  evaluation_duration.csv  planning_duration.csv  total_segment_length.csv
code/catkin_ws/src/path_planning/output/comparison/jump_size=1.0/: energy_consumption.csv  evaluation_duration.csv  planning_duration.csv  total_segment_length.csv
code/catkin_ws/src/path_planning/output/comparison/vicinity_jp0.5_6.0/: energy_consumption.csv  evaluation_duration.csv  planning_duration.csv  total_segment_length.csv
code/catkin_ws/src/path_planning/output/comparison/visibility_gain=6.0/: energy_consumption.csv  evaluation_duration.csv  planning_duration.csv
code/catkin_ws/src/path_planning/src/: evaluation.cpp  frontier_evaluation.cpp  metrics.cpp  mian.cpp  optimal_path.cpp  optimal_path_NBV.cpp  optimal_path_TSP.cpp  visulization.cpp
code/catkin_ws/src/pointcloud_segmentation/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
(+75 files in other folders)
